--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@
   width: 100px;
 }
 
-.nav-items{
-    padding: 0px 20px;
+.nav-items {
+  padding: 0px 20px;
 }
 
 .nav-items > ul {
@@ -26,14 +26,13 @@
 .res-container {
   display: flex;
   flex-wrap: wrap;
-  margin: 10px;
-  
+  justify-content: space-evenly;
+  gap: 20px;
 }
 
 .res-card {
   background-color: #f0f0f0;
-  width: 200px;
-  height: 300px;
+  width: 300px;
   padding: 5px;
   font-size: 12px;
 }
@@ -44,6 +43,7 @@
 
 .res-logo {
   width: 100%;
+  height: 200px;
 }
 
 .search {
